--- a/01-html-git-css/1.2/06-HTML_CSS_Layout/Unsolved/html-bio-with-css.html
+++ b/01-html-git-css/1.2/06-HTML_CSS_Layout/Unsolved/html-bio-with-css.html
@@ -6,6 +6,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CSS Stylesheets with Relative Paths</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -19,9 +20,10 @@
 
       <h2>Your Name</h2>
 
-      <img src="https://placehold.it/200x200" alt="Your Name">
+      <img src="https://secure.img1-fg.wfcdn.com/im/02238154/compr-r85/8470/84707680/pokemon-pikachu-wall-decal.jpg" alt="Your Name">
 
       <p>Write a short paragraph or two about yourself, or use placeholder text from <a href="http://www.lipsum.com/">www.lipsum.com</a></p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, cumque accusantium. Rerum minus commodi voluptate eum, dolorum nam optio quas ullam facilis atque, fuga quisquam ipsum? Laborum sunt possimus sint odit iure aspernatur magni molestias officia eos vero corporis quia aut hic doloremque, maxime consequatur laboriosam veniam deserunt officiis excepturi totam sed, quod inventore dolore? Inventore, distinctio ratione aspernatur mollitia ad facere obcaecati iusto illum repellendus molestiae ea est blanditiis, debitis molestias. Perferendis aspernatur dolorum nemo enim maiores sed debitis inventore beatae ipsum reprehenderit. Quas numquam ad sed sit maiores temporibus consequatur, aperiam, iure ratione quis, pariatur cumque harum nihil voluptas nesciunt. Minima placeat pariatur ipsum quae minus amet animi cupiditate natus repellendus sapiente temporibus non quibusdam aspernatur sit maxime et possimus, deleniti perspiciatis? Amet doloribus, eius vel cum ut aliquid, esse maxime reiciendis eveniet, ipsa quod est nulla voluptas. Blanditiis, eaque. Ullam, doloremque laudantium quo non soluta, ipsam ex voluptate optio eum hic sapiente tenetur nostrum delectus. Nemo dolores quam at sunt exercitationem inventore quod, ipsum et pariatur amet rem, impedit, reprehenderit sit architecto minus nobis optio. Voluptates quod veritatis id magnam laudantium consequuntur laborum, praesentium rerum ullam! Quidem tempore, porro non mollitia itaque nihil velit nisi autem vero vitae deserunt, illo magni. Fugit repudiandae aperiam sapiente odit architecto itaque amet nisi accusantium blanditiis fugiat distinctio, veritatis quibusdam nam reiciendis eveniet, dolor ea earum expedita. Ipsum, quas tenetur ratione hic quo velit sapiente saepe iusto, qui laudantium est reprehenderit ut aliquid odio consectetur inventore voluptate dolor tempora eos magni. Ducimus sed quisquam exercitationem vel eum in porro quo asperiores nihil assumenda, aperiam sequi, illo inventore corporis velit, cupiditate rem voluptatum odit voluptas totam. Aliquam eligendi enim vitae possimus, id rem voluptas ut sapiente mollitia deserunt pariatur quam deleniti, ipsum dicta quo tempore architecto ducimus impedit itaque ex non saepe.</p>
     </section>
 
     <section>
